Initialized fxml files and some controllers for the front end